@@ -1,6 +1,8 @@
 Changes for Labyrinth-Plugin-Album
 ==================================
 
+        - added functional tests for View method.
+
 1.10	2015-03-14
         - bugfix, don't save non-existent metadata!
 
